--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ body {
     text-align: center;
     overflow: hidden;
     margin-right: 25px;
-    border: 4px solid rgba(210, 210, 210, 0.2);
+    border: 4px solid rgba(210, 210, 210, 0.5);
     border-radius: 6px;
 }
 
@@ -245,29 +245,6 @@ body {
     padding-right: 10px;
 }
 
-
-/* 自适应布局 */
-
-@media (min-width: 1200px) {}
-
-@media (max-width: 1200px) {
-    .layui-main {
-        width: 100%;
-    }
-    .right-sidebar-children .layui-input {
-        width: 140px;
-    }
-}
-
-@media (max-width: 992px) {
-    .layui-main {
-        width: 100%;
-    }
-    .right-sidebar-children .layui-input {
-        width: 82%;
-    }
-}
-
 .right-sidebar-title {
     border-bottom: 1px solid rgba(30, 159, 255, .3);
     width: 100%;
@@ -292,7 +269,7 @@ body {
 }
 
 
-/* 评论 */
+/* 评论*/
 
 .commentlist {
     background-color: #ffffff;
@@ -528,4 +505,42 @@ a.comment-reply-link>span {
 .posts-nav .page-numbers:not(.dots):hover {
     background: #1E9FFF;
     color: #fff;
+}
+
+
+/* 自适应布局 */
+
+@media (min-width: 1200px) {}
+
+@media (max-width: 1200px) {
+    .layui-main {
+        width: 100%;
+    }
+    .right-sidebar-children .layui-input {
+        width: 140px;
+    }
+}
+
+@media (min-width: 992px) {}
+
+@media (max-width: 992px) {
+    .layui-main {
+        width: 100%;
+    }
+    .right-sidebar-children .layui-input {
+        width: 82%;
+    }
+}
+
+@media (min-width: 768px) {}
+
+@media (max-width: 768px) {
+    .list-card .list-post-thumb {
+        width: 100%;
+        height: 100%;
+    }
+    .list-card .list-post-thumb img {
+        width: 100%;
+        height: 100%;
+    }
 }
