--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ body {
     overflow: hidden;
     padding: 20px 20px 10px 20px;
     position: relative;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .list-post .list-post-content,
@@ -269,185 +269,81 @@ body {
 }
 
 
-/* 评论*/
+/* 评论列表*/
 
-.commentlist {
+.comment-list {
     background-color: #ffffff;
     padding: 20px;
+    margin-bottom: 20px;
 }
 
-.comments-title {
-    margin: 0 0 20px 0;
+.comment-list h3 {
+    margin-bottom: 20px;
 }
 
-.commentlist>li.comment {
-    background: #ffffff;
-    border: 1px solid #ddd;
+.comment-list .comment-parent {
     -moz-border-radius: 3px;
     border-radius: 3px;
-    margin: 0 0 1.625em 77px;
-    padding: 1.3em;
+    margin: 0 0 1.625em 0;
     position: relative;
 }
 
-.commentlist .pingback {
-    margin: 0 0 1.625em;
-    padding: 0 1.625em;
+.comment-list>.children {
+    margin: 0 0 1.62em 4em;
 }
 
-.commentlist .children {
-    list-style: none;
-    margin: 0;
+.comment-list .comment-avator {
+    float: left;
 }
 
-.commentlist .children li.comment {
-    background: #fff;
-    border-left: 1px solid #ddd;
-    -moz-border-radius: 0 3px 3px 0;
-    border-radius: 0 3px 3px 0;
-    margin: 1.625em 0 0;
-    padding: 1.625em;
-    position: relative;
+.comment-list .comment-parent .comment-meta,
+.comment-list .children .comment-meta {
+    padding-top: 5px;
+    padding-left: 32px;
+    margin: 0 0 0 28px;
+    line-height: 20px;
 }
 
-.commentlist .children li.comment a.comment-reply-link {
-    margin: 0 0 0 52px;
+.comment-list .children .comment-meta {
+    border-left: 1px solid #eee;
 }
 
-.children .bypostauthor>article {
-    border: 1px dashed #1E9FFF;
+.comment-list .comment {
+    margin: 20px 0 20px 0;
 }
 
-.commentlist .children li.comment>article {
-    padding: 10px;
-}
-
-.commentlist .children li.comment .fn {
+.comment .comment-meta .comment-author>a {
     display: block;
 }
 
-.comment-meta .fn {
-    font-style: normal;
-    font-size: 15px;
-    font-weight: bold;
-}
-
-.comment-meta {
-    color: #666;
-    font-size: 12px;
-    line-height: 2.2em;
-}
-
-.commentlist .children li.comment .comment-meta {
-    line-height: 1.625em;
-    margin-left: 50px;
-}
-
-.commentlist .children li.comment .comment-content {
-    margin: 0 0 0.5em 52px;
-    word-wrap: break-word;
-    -webkit-hyphens: auto;
-    -moz-hyphens: auto;
-    hyphens: auto;
-}
-
-.comment-meta a {
-    font-size: 4px;
-    font-style: oblique;
-}
-
-.commentlist .avatar {
+.comment-list .avatar {
     -moz-border-radius: 3px;
     -webkit-box-shadow: 0 1px 2px #ccc;
     -moz-box-shadow: 0 1px 2px #ccc;
     box-shadow: 0 1px 2px #ccc;
-    left: -86px;
-    padding: 0;
-    position: absolute;
-    top: 0;
     border-radius: 50%;
     border: 4px solid rgba(210, 210, 210, 0.2);
 }
 
-.commentlist>li:before {
-    content: url(assets/images/comment-arrow.png);
-    left: -21px;
-    position: absolute;
+.comment-list .comment-content p {
+    width: 90%;
+    margin: 5px 0 10px 0;
 }
 
-.commentlist>li>article .comment-content {
-    margin: 0 0 0.5em 0;
-}
 
-.commentlist>li.pingback:before {
-    content: '';
-}
+/*评论表单*/
 
-.commentlist .children .avatar {
-    background: none;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
-    left: 2.8em;
-    padding: 0;
-    top: 2.6em;
-    border-radius: 50%;
-    border: 4px solid rgba(210, 210, 210, 0.2);
-}
-
-a.comment-reply-link {
-    background: #eee;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    display: inline-block;
-    font-size: 12px;
-    text-decoration: none;
-}
-
-a.comment-reply-link:hover,
-a.comment-reply-link:focus,
-a.comment-reply-link:active {
-    color: #fff;
-}
-
-a.comment-reply-link>span {
-    display: inline-block;
-    position: relative;
-    top: -1px;
-}
-
-#respond #cancel-comment-reply-link {
-    margin: 0 0 5px 5px;
-}
-
-.commentlist {
-    list-style: none;
-}
-
-.content .commentlist,
-.page-template-sidebar-page-php .commentlist {
-    width: 100%;
-}
-
-.commentlist>li.bypostauthor {
-    border-color: #d3d3d3;
-}
-
-.commentlist>li.bypostauthor .comment-meta {
-    color: #575757;
-}
-
-.commentlist>li.bypostauthor:before {
-    content: url(assets/images/comment-arrow.png);
-}
-
-.commentlist .children>li.bypostauthor {
-    border-color: #d3d3d3;
-}
-
-#respond {
-    background: #ffff;
+.comment-respond {
+    background-color: #ffff;
     padding: 20px;
+}
+
+.comment-respond h3 {
+    margin-bottom: 20px;
+}
+
+.comment-list .comment-respond {
+    border: 1px solid rgba(210, 210, 210, 0.5);
 }
 
 .talkAboutMood {
@@ -474,9 +370,7 @@ a.comment-reply-link>span {
 }
 
 
-/*
-首页文章分页
-*/
+/*首页文章分页*/
 
 .posts-nav {
     font-size: 14px;
